--- a/app.plist
+++ b/app.plist
@@ -1,3 +1,4 @@
+
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
@@ -11,7 +12,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://61.183.0.30:8081/meap/app/download/AC6F7FF77ADE472E989AA9F0BA51F376.ipa</string>
+					<string>http://172.16.28.79:8080/lt/meap/app/download/CECA590C6DF05E4536424959804FB0FB.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +20,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://61.183.0.30:8081/meap/app/icon/3B6A77DA64575271A33048DD39B1637D/</string>
+					<string>http://172.16.28.79:8080/lt/meap/app/icon/0822EF3EABE8BA915160F6D8FD57A7FA/</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -27,11 +28,11 @@
 				<key>kind</key>
 				<string>software</string>			
 				<key>bundle-version</key>
-				<string>0.2</string>
+				<string>V_0.0.1</string>
 				<key>title</key>
 				<string>掌上综调</string>				
 				<key>bundle-identifier</key>
-				<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>				
+				<string>com.ccssoft.butterfly</string>				
 				<key>subtitle</key>
 				<string>应用大厅</string>
 			</dict>
